# google-tag-manager-mcp-server

./: .gitignore  README.md  global.d.ts  horizon_server.py  package.json  pyproject.toml  tsconfig.json  tsconfig.test.json
.github/workflows/: ci.yml  deploy.yml  format-protected.yml  patch-publish-latest.yml  patch-version-verification.yml
gtm_mcp/: __init__.py  auth.py  client.py  horizon.py  safety.py  tools.py
src/: index.ts
src/protectedMutation/: execution.ts  guards.ts  model.ts  normalize.ts  plan.ts
src/safety/: canonicalJson.test.ts  canonicalJson.ts  config.ts  confirmation.test.ts  confirmation.ts  errors.ts  firewall.ts  index.ts  types.ts
src/tools/: index.ts  protectedMutationActions.ts  protectedPublishActions.ts  protectedVersionActions.ts  safetyActions.ts
tests/: test_safety.py
